--- a/practice.html
+++ b/practice.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-
-</body>
-
+  <body>
+    <header>
+        <img src="" alt="" class="logo">
+            <nav class="menu-nav">
+                <ul>
+                    <li><a href=""></a>menu_1</li>
+                    <li><a href=""></a>menu_2</li>
+                    <li><a href=""></a>menu_3</li>
+                </ul>
+            </nav>
+        </img>
+    </header>
+  </body>
 </html>
